--- a/resources/css/post.css
+++ b/resources/css/post.css
@@ -1,285 +1,310 @@
 /* Reset */
+
 :root {
     scroll-behavior: smooth;
-  }
-  body{
+}
+
+body {
     font-family: 'Poppins', sans-serif;
     /* position: relative; */
-  }
-  #btn-back-to-top {
+}
+
+#btn-back-to-top {
     position: fixed;
     bottom: 20px;
     right: 20px;
     display: none;
-  }
-  a {
+}
+
+a {
     color: #4154f1;
     text-decoration: none;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     color: #717ff5;
     text-decoration: none;
-  }
-  ul li{
+}
+
+ul li {
     list-style: none;
-  }
-  .btn-edit{
+}
+
+.btn-edit {
     background: #fe696a;
     color: #ffffff !important;
-  }
-  .btn-edit:hover{
-      background: #e85a4f;
-      box-shadow: none;
-  }
- /* End Reset  */
+}
+
+.btn-edit:hover {
+    background: #e85a4f;
+    box-shadow: none;
+}
+
+.form-select:focus {
+    box-shadow: none;
+}
+
+html::-webkit-scrollbar {
+    width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+    background: rgb(179, 177, 177);
+    border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: rgb(136, 136, 136);
+    border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+    background: rgb(100, 100, 100);
+    border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:active {
+    background: rgb(68, 68, 68);
+    border-radius: 10px;
+}
+
+
+/* End Reset  */
+
+
 /* Navbar */
-.navbar-brand{
-  color: #e85a4f;
-  font-weight: 700;
+
+.navbar-brand {
+    color: #e85a4f;
+    font-weight: 700;
 }
-.navbar-brand:hover{
-  color: #e85a4f;
+
+.navbar-brand:hover {
+    color: #e85a4f;
 }
-.form-control{
-  border: none;
-  background-color: #f7f9fc;
+
+.form-control {
+    border: none;
+    background-color: #f7f9fc;
 }
-.form-control:focus{
-  box-shadow: none;
+
+.form-control:focus {
+    box-shadow: none;
 }
-.btn{
-  font-size: 20px;
-  color: #e85a4f;
-  transition: 0.2s;
+
+.btn {
+    font-size: 20px;
+    color: #e85a4f;
+    transition: 0.2s;
 }
-.btn:hover{
-  color: #ffffff;
-  background-color: #e85a4f;
-  box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
+
+.btn:hover {
+    color: #ffffff;
+    background-color: #e85a4f;
+    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
 }
-.btn:focus{
-  box-shadow: none;
+
+.btn:focus {
+    box-shadow: none;
 }
+
+
 /* End Navbar */
+
 
 /* Post */
 
-.form-input:focus{
-  background: #ebecf1;
+.form-input:focus {
+    background: #ebecf1;
 }
 
+.form-check-input:focus {
+    box-shadow: none;
+}
+
+
 /* image upload */
+
 .image_container {
-  height: 120px;
-  width: 200px;
-  border-radius: 6px;
-  overflow: hidden;
-  margin: 10px;
+    height: 120px;
+    width: 200px;
+    border-radius: 6px;
+    overflow: hidden;
+    margin: 10px;
 }
 
 .image_container img {
-  height: 100%;
-  width: auto;
-  object-fit: cover;
+    height: 100%;
+    width: auto;
+    object-fit: cover;
 }
 
 .image_container span {
-  top: -6px;
-  right: 8px;
-  color: red;
-  font-size: 28px;
-  font-weight: normal;
-  cursor: pointer;
+    top: -6px;
+    right: 8px;
+    color: red;
+    font-size: 28px;
+    font-weight: normal;
+    cursor: pointer;
 }
 
-/* 
-.image-title-wrap {
-  padding: 0 15px 15px 15px;
-  color: #222;
-} */
-/* 
-.drag-text {
-  text-align: center;
+.btn-upload {
+    background: #edf0f7;
+    border: none;
 }
 
-.drag-text h3 {
-  font-weight: 100;
-  text-transform: uppercase;
-  color: #e85a4f;
-  padding: 60px 0;
-}
 
-.file-upload-image {
-  max-height: 200px;
-  max-width: 200px;
-  margin: auto;
-  padding: 20px;
-}
-
-.remove-image {
-  width: 200px;
-  margin: 0;
-  color: #fff;
-  background: #cd4535;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-  border-bottom: 4px solid #b02818;
-  transition: all .2s ease;
-  outline: none;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.remove-image:hover {
-  background: #c13b2a;
-  color: #ffffff;
-  transition: all .2s ease;
-  cursor: pointer;
-}
-
-.remove-image:active {
-  border: 0;
-  transition: all .2s ease;
-} */
 /* End Post */
 
+
 /* Footer */
+
 .footer {
     background: #f6f9ff;
     padding: 0 0 30px 0;
     font-size: 14px;
-  }
-  .footer .footer-top {
+}
+
+.footer .footer-top {
     border-top: 1px solid #e1ecff;
     border-bottom: 1px solid #e1ecff;
     padding: 60px 0 30px 0;
-  }
-  
-  .footer .footer-top .footer-info {
+}
+
+.footer .footer-top .footer-info {
     margin-bottom: 30px;
     text-align: justify;
-  }
-  
-  .footer .footer-top .footer-info .logo span {
+}
+
+.footer .footer-top .footer-info .logo span {
     font-size: 30px;
     font-weight: 700;
     letter-spacing: 1px;
     color: #012970;
     margin-top: 3px;
-  }
-  
-  .footer .footer-top .footer-info p {
+}
+
+.footer .footer-top .footer-info p {
     font-size: 14px;
     line-height: 24px;
     margin-bottom: 0;
-  }
-  
-  .footer .footer-top .social-links a {
+}
+
+.footer .footer-top .social-links a {
     font-size: 20px;
     display: inline-block;
     color: rgba(1, 41, 112, 0.5);
     line-height: 0;
     margin-right: 10px;
     transition: 0.3s;
-  }
-  
-  .footer .footer-top .social-links a:hover {
+}
+
+.footer .footer-top .social-links a:hover {
     color: #012970;
-  }
-  
-  .footer .footer-top h4 {
+}
+
+.footer .footer-top h4 {
     font-size: 16px;
     font-weight: bold;
     color: #012970;
     text-transform: uppercase;
     position: relative;
     padding-bottom: 12px;
-  }
-  
-  .footer .footer-top .footer-links {
+}
+
+.footer .footer-top .footer-links {
     margin-bottom: 30px;
-  }
-  
-  .footer .footer-top .footer-links ul {
+}
+
+.footer .footer-top .footer-links ul {
     list-style: none;
     padding: 0;
     margin: 0;
-  }
-  
-  .footer .footer-top .footer-links ul i {
+}
+
+.footer .footer-top .footer-links ul i {
     padding-right: 2px;
     color: #d0d4fc;
     font-size: 12px;
     line-height: 0;
-  }
-  
-  .footer .footer-top .footer-links ul li {
+}
+
+.footer .footer-top .footer-links ul li {
     padding: 10px 0;
     display: flex;
     align-items: center;
-  }
-  
-  .footer .footer-top .footer-links ul li:first-child {
+}
+
+.footer .footer-top .footer-links ul li:first-child {
     padding-top: 0;
-  }
-  
-  .footer .footer-top .footer-links ul a {
+}
+
+.footer .footer-top .footer-links ul a {
     color: #013289;
     transition: 0.3s;
     display: inline-block;
     line-height: 1;
-  }
-  
-  .footer .footer-top .footer-links ul a:hover {
+}
+
+.footer .footer-top .footer-links ul a:hover {
     color: #4154f1;
-  }
-  
-  .footer .footer-top .footer-contact p {
+}
+
+.footer .footer-top .footer-contact p {
     line-height: 26px;
-  }
-  
-  .footer .copyright {
+}
+
+.footer .copyright {
     text-align: center;
     padding-top: 30px;
     color: #012970;
-  }
-  
-  .footer .credits {
+}
+
+.footer .credits {
     padding-top: 10px;
     text-align: center;
     font-size: 13px;
     color: #012970;
-  }
+}
+
+
 /* End Footer */
 
+
+/* Back to top */
+
+#btn-back-to-top {
+    background: #e85a4f;
+    color: #ffffff;
+    position: fixed;
+    bottom: 70px;
+    right: 20px;
+    display: none;
+    z-index: 99;
+}
+
+#btn-back-to-top:hover {
+    box-shadow: none;
+    background: #eb8c85;
+}
+
+
+/* End Back to top */
+
+
 /* Big tablet to 1200px; */
-@media only screen  and (min-width:1200px){
-    .for-mobile{
+
+@media only screen and (min-width:1200px) {
+    .for-mobile {
         display: none;
     }
-  }
-   
-  /* Small tablet to big tablet from 768x to 1023px */
-  @media only screen and (min-width:1023px){
-      .for-mobile{
-          display: none;
-      }
-  }
-   
-  /* Small phones to small tablets */
-  @media only screen and (max-width: 767px){
-      .for-desktop{
-          display: none;
-      }
-  }
-   
-  /* Small phones from 0 to 480px; */
-  @media only screen and (max-width: 480px){
-      .for-desktop{
-          display: none;
-      }
-      
-  }
-  
+}
+
+
+/* Small phones from 0 to 480px; */
+
+@media only screen and (max-width: 480px) {
+    .for-desktop {
+        display: none;
+    }
+}
