--- a/resources/css/cart.css
+++ b/resources/css/cart.css
@@ -79,141 +79,36 @@ a {
 
 /* Cart */
 
-.shopping-cart .content {
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-    background-color: white;
-}
-
-.shopping-cart .items {
-    margin: auto;
-}
-
-.shopping-cart .items .product {
-    margin-bottom: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.shopping-cart .items .product .info {
-    padding-top: 0px;
-    text-align: center;
-}
-
-.shopping-cart .items .product .info .product-name {
-    font-weight: 600;
-}
-
-.shopping-cart .items .product .info .product-name .product-info {
-    font-size: 14px;
-    margin-top: 15px;
-}
-
-.shopping-cart .items .product .info .product-name .product-info .value {
-    font-weight: 400;
-}
-
-.shopping-cart .items .product .info .quantity .quantity-input {
-    margin: auto;
-    width: 80px;
-}
-
-.shopping-cart .items .product .info .price {
-    margin-top: 15px;
-    font-weight: bold;
-    font-size: 22px;
-}
-
-.shopping-cart .summary {
-    border-top: 2px solid #e85a4f;
-    background-color: #fcfcfd;
-    height: 100%;
-    padding: 30px;
-}
-
-.shopping-cart .summary h3 {
-    text-align: center;
-    font-size: 1.3em;
-    font-weight: 600;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.shopping-cart .summary .summary-item:not(:last-of-type) {
-    padding-bottom: 10px;
-    padding-top: 10px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.shopping-cart .summary .text {
-    font-size: 1em;
-    font-weight: 600;
-}
-
-.shopping-cart .summary .price {
-    font-size: 1em;
-    float: right;
-}
-
-@media (min-width: 768px) {
-    .shopping-cart .items .product .info {
-        padding-top: 25px;
-        text-align: left;
-    }
-    .shopping-cart .items .product .info .price {
-        font-weight: bold;
-        font-size: 22px;
-        top: 17px;
-    }
-    .shopping-cart .items .product .info .quantity {
-        text-align: center;
-    }
-    .shopping-cart .items .product .info .quantity .quantity-input {
-        padding: 4px 10px;
-        text-align: center;
-    }
-}
-
-.preview {
-    max-width: 100%;
-    height: auto;
-    overflow: hidden;
-}
-
-.img-fluid {
-    max-width: 100%;
-    height: auto;
+.btn-shopping {
+    color: #e85a4f;
     transition: 0.2s;
+    border-radius: 2px;
+    padding: 5px;
 }
 
-.img-fluid:hover {
-    transform: scale(1.02);
-}
-
-.minus,
-.plus {
-    border: 1px solid #ced4da;
-    background: #ffffff;
+.btn-shopping:hover {
+    color: #ffffff;
+    background: #e85a4f;
 }
 
 .btn-remove {
-    transition: 0.2s;
-}
-
-.btn-remove:hover {
-    color: #e85a4f !important;
+    color: #e85a4f;
+    background: #ffffff;
+    border: none;
 }
 
 .btn-checkout {
     color: #ffffff;
-    background-color: #e85a4f;
+    background: #e85a4f;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
     box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
-    transition: 0.2s;
 }
 
 .btn-checkout:hover {
     color: #ffffff;
-    background-color: #e85a4f;
-    box-shadow: 0px 8px 10px rgba(253, 90, 79, 0.4);
+    box-shadow: none;
 }
 
 
@@ -224,7 +119,7 @@ a {
 
 .footer {
     background: #f6f9ff;
-    padding: 0 0 30px 0;
+    padding: 0 0 0 0;
     font-size: 14px;
 }
 
