--- a/deals/style.css
+++ b/deals/style.css
@@ -71,16 +71,52 @@ a {
 }
 
 
-/* End Navbar */
+/* End Reset */
 
 
-/* Information */
+/* Navbar */
 
-.info {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 70px;
+.navbar-brand {
+    color: #e85a4f;
+    font-weight: 700;
 }
+
+.navbar-brand:hover {
+    color: #e85a4f;
+}
+
+.search-box {
+    border: none;
+    background-color: #f7f9fc;
+}
+
+.search-box:focus {
+    background-color: #f7f9fc;
+}
+
+.btn-search,
+.btn-nav {
+    font-size: 20px;
+    color: #e85a4f;
+    background: none;
+    border: none;
+    transition: 0.2s;
+}
+
+.btn-search:hover {
+    color: #ffffff;
+    background: #e85a4f;
+    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
+}
+
+.btn-nav:hover {
+    color: #ffffff;
+    background: #e85a4f;
+    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
+}
+
+
+/* End Navbar */
 
 
 /* List */
@@ -101,102 +137,78 @@ a {
 
 /* End List */
 
-.btn-save {
+
+/* Deal */
+
+.info {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 70px;
+    z-index: 99;
+}
+
+.fa-arrow-left {
+    transition: 0.2s;
+}
+
+.back-to-deal:hover .fa-arrow-left {
+    transform: translateX(-10px);
+}
+
+.img-fix {
+    object-fit: cover;
+}
+
+.btn-success,
+.btn-danger {
+    border: none;
+}
+
+
+/* End Deal */
+
+
+/* Small phones from 0 to 480px; */
+
+@media only screen and (max-width: 480px) {
+    .img-fix {
+        width: 100%;
+    }
+}
+
+.item-header {
+    background: #f5f5f5;
+}
+
+.tracking-title {
+    font-size: 12px;
+}
+
+.tracking-content {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.btn-confirm {
+    font-size: 18px;
+    border: none;
+    background: #4154f1;
+    color: #ffffff;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.btn-deny {
+    font-size: 18px;
+    border: none;
     background: #e85a4f;
     color: #ffffff;
-    transition: 0.2s;
-}
-
-.btn-save:hover {
-    background: #161616;
-    color: #ffffff;
-}
-
-
-/* End Information */
-
-
-/* Profile */
-
-.emp-profile {
-    padding: 3%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    border-radius: 0.5rem;
-    background: #fff;
-}
-
-.profile-img {
-    text-align: center;
-}
-
-.profile-img img {
-    width: 70%;
-    height: 100%;
-}
-
-.profile-img .file {
-    position: relative;
-    overflow: hidden;
-    margin-top: -20%;
-    width: 70%;
-    border: none;
-    border-radius: 0;
-    font-size: 15px;
-    background: #212529b8;
-}
-
-.profile-img .file input {
-    position: absolute;
-    opacity: 0;
-    right: 0;
-    top: 0;
-}
-
-.btn-twitter {
-    color: #1da1f2;
     padding: 5px;
     border-radius: 5px;
-    background: rgba(29, 161, 242, .08);
-    transition: 0.2s;
-}
-
-.btn-twitter:hover {
-    color: #ffffff;
-    background: #1da1f2;
-}
-
-.btn-instagram {
-    padding: 5px;
-    border-radius: 5px;
-    color: #5851db;
-    background: rgba(88, 81, 219, .08);
-    transition: 0.2s;
-}
-
-.btn-instagram:hover {
-    color: #ffffff;
-    background: #5851db;
-}
-
-.btn-facebook {
-    padding: 5px;
-    border-radius: 5px;
-    color: #3b5998;
-    background: rgba(59, 89, 152, .08);
-    transition: 0.2s;
-}
-
-.btn-facebook:hover {
-    color: #ffffff;
-    background: #3b5998;
 }
 
 
-/* End Profile */
-
-
-/* Footer */
+/* End Items */
 
 
 /* Footer */
