--- a/item-detail/style.css
+++ b/item-detail/style.css
@@ -259,6 +259,25 @@ html::-webkit-scrollbar-thumb:active {
     box-shadow: none;
 }
 
+.btn-upload {
+    background: #edf0f7;
+    border: none;
+}
+
+.btn-cancel {
+    color: #e85a4f;
+}
+
+.btn-confirm {
+    background: #e85a4f;
+    color: #ffffff;
+    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
+}
+
+.btn-confirm:hover {
+    box-shadow: none;
+}
+
 
 /* End Navbar */
 
@@ -269,6 +288,29 @@ html::-webkit-scrollbar-thumb:active {
     width: 100%;
     height: 500px;
     overflow: hidden;
+}
+
+.image_container {
+    height: 120px;
+    width: 200px;
+    border-radius: 6px;
+    overflow: hidden;
+    margin: 10px;
+}
+
+.image_container img {
+    height: 100%;
+    width: auto;
+    object-fit: cover;
+}
+
+.image_container span {
+    top: -6px;
+    right: 8px;
+    color: red;
+    font-size: 28px;
+    font-weight: normal;
+    cursor: pointer;
 }
 
 
