--- a/item-detail/style.css
+++ b/item-detail/style.css
@@ -454,6 +454,42 @@ html::-webkit-scrollbar-thumb:active {
 /* End Footer */
 
 
+/* Animation */
+
+.card {
+    transition: all 300ms;
+}
+
+.card-hover:hover {
+    transform: translateY(-10px);
+    box-shadow: rgba(217, 210, 200, 0.51) 6px 6px 16px 0px, rgba(255, 255, 255, 0.83) -6px -6px 26px 0px;
+}
+
+
+/* End Animation */
+
+
+/* Back to top */
+
+#btn-back-to-top {
+    background: #e85a4f;
+    color: #ffffff;
+    position: fixed;
+    bottom: 70px;
+    right: 20px;
+    display: none;
+    z-index: 99;
+}
+
+#btn-back-to-top:hover {
+    box-shadow: none;
+    background: #eb8c85;
+}
+
+
+/* End Back to top */
+
+
 /* Big tablet to 1200px; */
 
 @media only screen and (min-width:1200px) {
